# clotscape

./: .gitignore  Makefile  README.md  app.py  config.py  gui.py  main.py  pyproject.toml
clotscape/: __init__.py  project.py
clotscape/ui/: __init__.py  app.py
clotscape/ui/components/: __init__.py
clotscape/ui/widgets/: __init__.py  file_manager.py  scan_viewer.py  segment_viewer.py
clotscape/ui/widgets/image/: __init__.py  image.py
data/test/: test.clotscape
docs/: index.md
notebooks/: Auto Segment.ipynb  basic_segment_demo.ipynb  contours-animation.ipynb  contours.ipynb  pipeline.ipynb  preprocessing.ipynb  segment.ipynb  segment_area.ipynb
