[tool.poetry]
name = "clotscape"
version = "0.1.0"
description = ""
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"
packages = [{include = "clotscape"}]

[tool.poetry.dependencies]
python = ">3.11 <3.12"
jupyterlab = "^4.0.5"
matplotlib = "^3.7.3"
onnx = "^1.14.1"
onnxruntime = "^1.15.1"
opencv-python = "^4.8.0.76"
pycocotools = "^2.0.7"
pyside6 = "^6.5.3"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
streamlit = "^1.26.0"
torch = {version = "^2.0.1+cu117", source = "pytorch"}
torchvision = {version = "^0.15.2+cu117", source = "pytorch"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.9.1"}
isort = "^5.12.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
